--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,217 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+  background-color: var(--color-white);
+  overflow-x: hidden;
+}
+  
+:root {
+  /*      typography */
+
+  /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
+
+  --fs-h1: 32px;
+  --fs-h2: 28px;
+  --fs-h3: 22px;
+
+  --fs-hxl: 140px;
+  --fs-hl: 80px;
+
+  --fs-p1: 18px;
+  --fs-p2: 16px;
+  --fs-p3: 14px;
+
+  --fs-logo: 22px;
+  
+
+  --font-alfa: "Inter", sans-serif;
+  --font-beta: "Poppins", sans-serif;
+
+  --color-white: #ffff;
+  --color-black: #000000;
+  --color-grey: #494848;
+  
+  --font-weight-bold: 700;
+  --font-weight-medium: 500;
+  --font-weight-regular: 400;
+  --font-weight-light: 300;
+
+  --pd-page: 18px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.customCursor {
+  opacity: 0;
+}
+
+.sectionTitle {
+  font-size: var(--fs-h2);
+  font-weight: var(--font-weight-regular);
+}
+
+.subSectionTitle {
+  font-size: var(--fs-h2);
+  font-weight: var(--font-weight-regular);
+}
+  
+  
+  @media (min-width: 768px){
+    html, * {
+      cursor: none;
+    }
+
+    :root {
+
+      --fs-h1: 72px;
+      --fs-h2: 58px;
+      --fs-h3: 42px;
+
+      --fs-hxl: 200px;
+      --fs-hl: 100px;
+    
+      --fs-p1: 24px;
+      --fs-p2: 18px;
+      --fs-p3: 14px;
+
+
+      --pd-page: 30px;
+    }
+
+    .customCursor {
+      opacity: 1;
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 1000;
+
+      width: 13px;
+      height: 13px;
+
+      border-radius: 50%;
+      background-color: var(--color-black);
+
+      transform: translate(-50%, -50%);
+
+      transition: background-color .2s ease-in-out;
+    }
+
+    .customCursor::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      width: 11px;
+      height: 11px;
+
+      border-radius: 50%;
+      background-color: transparent;
+
+      border: 1px solid var(--color-black);
+
+      transition: width .2s ease-in-out, height .2s ease-in-out;
+
+    }
+
+    .cursorLight {
+      background-color: var(--color-white);
+    }
+
+    .cursorLink {
+      width: 6px;
+      height: 6px;
+
+      transition: width .2s ease-in-out, height .2s ease-in-out;
+    }
+
+    .cursorLink::after {
+      width: 45px;
+      height: 45px;
+    }
+
+    .cursorLight::after {
+      border: 1px solid var(--color-white);
+    }
+
+    .cursorLinkLight {
+      width: 6px;
+      height: 6px;
+
+      background-color: var(--color-white);
+
+      transition: width .2s ease-in-out, height .2s ease-in-out;
+    }
+
+    .cursorLinkLight::after {
+      width: 45px;
+      height: 45px;
+
+      border: 1px solid var(--color-white);
+    }
+
+    
+
+
+
+    .subSectionTitle {
+      font-size: var(--fs-h3);
+    }
+  }
+
+h1 {
+  font-size: var(--fs-h1);
+}
+h2 {
+  font-size: var(--fs-h2);
+}
+h3 {
+  font-size: var(--fs-h3);
+}
+
+.p1 {
+  font-size: var(--fs-p1);
+}
+
+.heading {
+  font-size: var(--fs-h1);
+}
+
+html {
+  scroll-behavior: auto;
+  -webkit-font-smoothing: antialiased;
+  
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  max-width: 100vw;
+  font-family: var(--font-alfa);
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+
+}
+
+p {
+  font-size: var(--fs-p3);
+}
+
+
+
+@keyframes scrollingText {
+  0% {
+    transform: translateX(100%); /* Start off-screen */
+  }
+  100% {
+    transform: translateX(-100%); /* Move off-screen on the other side */
   }
 }
