--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,7 @@ body {
   --color-white: #ffff;
   --color-black: #000000;
   --color-grey: #494848;
+  --color-grey-lt: #e5e5e5e7;
   
   --font-weight-bold: 700;
   --font-weight-medium: 500;
@@ -154,6 +155,7 @@ body {
 
       border: 1px solid var(--color-white);
     }
+
 
     
 
